--- a/index.html
+++ b/index.html
@@ -84,23 +84,28 @@
           <div id="ttt-display"></div>
         </section>
     <hr>
+
+
         <!-- New Game -->
-      <button id="new-game" class="btn btn-success">New Game</button>
+      <section id="new-game-button">
+        <button id="new-game" class="btn btn-success">New Game</button>
+      </section>
+
 
     <!-- Game Grid -->
     <section id="game-grid" class="container">
       <div class="row h-100 board">
-        <div class="col-4 box"></div>
-        <div class="col-4 box"></div>
-        <div class="col-4 box"></div>
+        <div class="col-4 box" id="0"></div>
+        <div class="col-4 box" id="1"></div>
+        <div class="col-4 box" id="2"></div>
 
-        <div class="col-4 box"></div>
-        <div class="col-4 box"></div>
-        <div class="col-4 box"></div>
+        <div class="col-4 box" id="3"></div>
+        <div class="col-4 box" id="4"></div>
+        <div class="col-4 box" id="5"></div>
 
-        <div class="col-4 box"></div>
-        <div class="col-4 box"></div>
-        <div class="col-4 box"></div>
+        <div class="col-4 box" id="6"></div>
+        <div class="col-4 box" id="7"></div>
+        <div class="col-4 box" id="8"></div>
       </div>
     </section>
   </section>
