Updated CSS and game functionality Completed the gameplay functionality and resolve bugs that would not allow the hover to work Also updated the CSS for final touches of the project before presentations

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <button class="btn btn-primary">Sign Up</button>
         </fieldset>
       </form>
-
+      <br>
       <!-- sign-in form -->
       <form id="sign-in" class="border">
         <fieldset>
@@ -91,6 +91,7 @@
         <button id="new-game" class="btn btn-success">New Game</button>
       </section>
 
+      <h4>Play the classic game here</h4>
 
     <!-- Game Grid -->
     <section id="game-grid" class="container">
